# import-gtest-into-existing-cmake-project

./: CMakeLists.txt  HelloWorld.cpp  README.md
UnitTest/: example.cpp  gmock_example.cpp
include/: SampleClass.h
src/: SampleClass.cpp
